# thirtyfour

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mentor_reviewed_regex_plan.md
.github/workflows/: coverage.yml  security-audit.yml  test.yml
examples/: basic_usage.rs
improvements/: 01-file-io-optimization.md  02-string-allocations.md  07-options-api.md  09-better-error-types.md  11-missing-examples.md  13-test-organization.md  15-code-duplication.md  17-module-organization.md  case_test.md  test_helper.md  test_orga.md
js/: testing-library.js
src/: alt_text.rs  configure.rs  display_value.rs  label_text.rs  lib.rs  placeholder_text.rs  role.rs  simple_options.rs  test_id.rs
src/options/: common.rs  label_text.rs  mod.rs  role.rs  simple.rs
testing-library/: package-lock.json  package.json  webpack.config.js
testing-library/src/: testing-library.js
tests/: common.rs  screen_by_alt_text.rs  screen_by_alt_text_exact.rs  screen_by_display_value.rs  screen_by_display_value_exact.rs  screen_by_label_text.rs  screen_by_label_text_options.rs  screen_by_placeholder_text.rs  screen_by_placeholder_text_exact.rs  screen_by_regex.rs  screen_by_role.rs  screen_by_role_options.rs  screen_by_test_id.rs  screen_by_test_id_exact.rs  screen_by_text.rs  screen_by_text_exact.rs  screen_by_title.rs  screen_by_title_exact.rs  screen_configure.rs  screen_log_testing_playground_url.rs  screen_pages.rs  screen_within.rs
tests/test_html/: by_alt_text_exact.html  by_placeholder_text_exact.html  by_role_options.html  by_test_id_exact.html  by_text_exact.html  screen_within.html
thirtyfour/: Cargo.toml
thirtyfour/js/: testing-library.js
thirtyfour/src/: lib.rs  screen.rs
thirtyfour/src/screen/: alt_text.rs  configure.rs  display_value.rs  label_text.rs  mod.rs  placeholder_text.rs  role.rs  test_id.rs  text.rs  title.rs
thirtyfour/tests/: by_alt_text.rs  by_label_text.rs  by_role.rs  by_test_id.rs  by_text.rs  by_title.rs  common.rs  screen.rs  screen_by_alt_text.rs  screen_by_alt_text_exact.rs  screen_by_display_value.rs  screen_by_display_value_exact.rs  screen_by_label_text.rs  screen_by_label_text_options.rs  screen_by_placeholder_text.rs  screen_by_placeholder_text_exact.rs  screen_by_role.rs  screen_by_role_options.rs  screen_by_test_id.rs  screen_by_test_id_exact.rs  screen_by_text.rs  screen_by_text_exact.rs  screen_by_title.rs  screen_by_title_exact.rs  screen_configure.rs  screen_log_testing_playground_url.rs  screen_pages.rs  screen_within.rs  within_screen.rs
thirtyfour/tests/test_html/: by_display_value_exact.html  by_label_text_options.html  by_title_exact.html  sample_page.html  screen_configure.html
