[package]
name = "thirtyfour-testing-library-ext"
version = "0.1.0"
authors = ["Greedeuh <adrien.olivon.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Extends Thirtyfour's crate capabilities with the Javascript Testing Library API that emphasizes accessibility and user-centric testing approaches.
"""
homepage = "https://github.com/Greedeuh/thirtyfour-testing-library-ext"
repository = "https://github.com/Greedeuh/thirtyfour-testing-library-ext"
documentation = "https://docs.rs/thirtyfour-testing-library-ext"

readme = "README.md"
keywords = [
    "selenium",
    "webdriver",
    "testing-library",
    "dom",
    "automation",
]
categories = [
    "api-bindings",
    "development-tools::testing",
    "web-programming",
]
exclude = [
    "testing-library/*",
    "ci/*",
    ".codecov.yml",
    "CLAUDE.md"
]

[dependencies]
thirtyfour = "0.36.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
regex = "1"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }
rstest = { version = "0.25.0", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
